--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.323.0",
-    "next": "14.1.0",
+    "next": "^14.2.28",
     "next-auth": "^4.24.5",
     "next-i18next": "^15.2.0",
     "next-themes": "^0.2.1",
