--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.1.3",
@@ -23,7 +24,6 @@
     "next-i18next": "^15.2.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^9.6.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
@@ -35,7 +35,6 @@
   "devDependencies": {
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.52",
-    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
